# zk-ballot

./: .gitignore  Cargo.toml  README.md
src/: ballot_energy.rs  circuit.rs  hash.rs  lib.rs  merkle.rs  tree.rs
